# aerosync

./: Makefile  aerosync.spec  config.py  pyproject.toml
aerosync/: aerosync.py
aerosync/cli/: cli.py
aerosync/cli/commands/: google_drive.py  list_entries.py  sync.py
aerosync/cloud_providers/: base.py  google_drive.py  providers.py
aerosync/db/: db.py
aerosync/db/models/: aerosync_config.py  watched_directories.py
aerosync/db/repositories/: aerosync_config_repository.py  watched_directories_repository.py
aerosync/utils/: path_utils.py  print_utils.py
