[project]
name = "aerosync"
version = "0.1.0"
description = "Sync your folders to the cloud of your choice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "pydantic>=2.11.4",
    "pyinstaller>=6.13.0",
    "sqlmodel>=0.0.24",
    "tabulate>=0.9.0",
]
